# embryo-project

./: Makefile  README.md  pyproject.toml  requirements.txt
embryo_project/: __init__.py  augment.py  config.py  dataset.py  features.py  plots.py  splits.py
embryo_project/modeling/: evaluate.py  evaluate_img.py  predict.py  train.py  train_img.py
notebooks/: 1-folder-preprocessing.ipynb  2-annotations-preprocessing.ipynb  2-image-preprocessing.ipynb  3-exploratory-data-analysis.ipynb  4-train-val-test-split.ipynb  5-train.ipynb
reports/: 3dcnn_report.txt  ResNet18Binary_aug_report.txt  ResNet18Binary_original_report.txt  ResNet18LSTM_balanced_report.txt  ResNet18LSTM_original_aug_report.txt  ResNet18LSTM_original_report.txt  ResNet18LSTM_report.txt  ResNet18LSTM_report_aug.txt  ViTLSTM_report.txt
