[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "embryo_project"
version = "0.0.1"
description = "Classification of embryos images to predict their survival rate"
authors = [
  { name = "Ester Molinari" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["embryo_project"]
include = ["pyproject.toml", "embryo_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["embryo_project"]
force-sort-within-sections = true

